# onnx_wasm_example

./: LICENSE  Makefile  README.md
docker/: Dockerfile
src/: CMakeLists.txt  main_batch_wasm_port.cpp
staff/: demo.html  index.html  model.onnx  speed_tests.html
